refactor: 배열 대신 List를 사용하도록 변경 -데이터를 구조화 하기 위해 변경하였습니다. -코드 변경점에 따라 테스트 코드가 정상 작동할 수 있도록 수정하였습니다.